<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rate"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swufe.firstapp.RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:gravity="center"
        android:hint="@string/rmb_hint"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/showOut"
        android:textSize="35sp"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_dollar"
        android:onClick="onClick"
        android:text="@string/btn_dollar_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_euro"
        android:text="@string/btn_euro_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_won_label" />

    <Button
        android:id="@+id/btn_opencfg"
        android:onClick="openOne"
        android:layout_marginTop="24dp"
        android:text="@string/btn_opencfg_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>